Format code with the settings I like ;) I use the default Eclipse formatter, with these exceptions: - Indent statements within 'switch' body is checked - Maximum line width is 120 chars - Maximum line width in a comment is 160 chars